--- a/src/global.scss
+++ b/src/global.scss
@@ -34,4 +34,13 @@
 
 /* @import "@ionic/angular/css/palettes/dark.always.css"; */
 /* @import "@ionic/angular/css/palettes/dark.class.css"; */
-@import '@ionic/angular/css/palettes/dark.system.css';
+// @import '@ionic/angular/css/palettes/dark.system.css';
+
+/* Light theme colors */
+:root {
+    --ion-background-color: #ffffff;
+    --ion-text-color: #000000;
+    --ion-toolbar-background: #f8f8f8;
+    --ion-toolbar-color: #000000;
+    --ion-item-background: #ffffff;
+}
